[package]
name = "lost-metrics-misc"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
hashbrown = { version = "0.15.0", features = ["serde"] }
# lost-metrics-core = { path= "../lost-metrics-core" }
lost-metrics-core = { git = "https://github.com/averageeucplayer/lost-metrics-core", branch="main" }
# lost-metrics-data = { path= "../lost-metrics-data" }
lost-metrics-data = { git = "https://github.com/averageeucplayer/lost-metrics-data", branch="main" }
flate2 = "1.0.30"
moka = { version = "0.12.7", features = ["sync"] }